--- a/src/components/WeatherLocation/WeatherData/styles.css
+++ b/src/components/WeatherLocation/WeatherData/styles.css
@@ -1,9 +1,11 @@
 .weatherDataCont {
     background-color: rgba(200, 200, 200, 0.5);
-    width: 400px;
+    width: 100%;
     height: 100px;
     line-height: 100px;
     border-radius: 5px;
+    padding: 5px;
+    box-sizing: border-box;
 }
 
 .weatherExtraInfoCont {
